# facturama-portal

./: .gitignore  PLAN.md  README.md  pyproject.toml
downloads/: uUDKYAPfk4mFbITLol93kw2.xml
scripts/: emit_he.py  emit_test_cfdis.py
src/: app.py
src/facturama_portal/scripts/: import_sat_catalogs.py
src/models/: __init__.py
src/routes/: cfdi.py  clients.py  common.py  dashboard.py  issuers.py  products.py  reports.py  sat.py
src/services/: csd_parser.py  facturama_api.py  facturama_service.py  reports.py
src/static/: fiscal_forms.js  styles.css
src/static/css/: sat-search.css
src/static/js/: sat-search.js
src/templates/: base.html  dashboard.html  login.html
src/templates/cfdis/: detail.html  list.html  new.html
src/templates/clients/: form.html  list.html
src/templates/errors/: facturama.html
src/templates/issuers/: bulk_csd.html  form.html  list.html
src/templates/products/: form.html  list.html
src/templates/reports/: emisor_pdf_template.html  emisor_preview.html  index.html  pdf.html  pdf_template.html  preview.html
src/utils/: config.py  fiscal.py  report_graphs.py
tests/unit/: test_cfdi_detail.py  test_cfdi_routes.py  test_clients_routes.py  test_config.py  test_csd_parser.py  test_dashboard.py  test_facturama_service.py  test_fiscal_utils.py  test_invoice_series.py  test_issuer_csd_db.py  test_issuer_csd_routes.py  test_issuers_routes.py  test_models_schema.py  test_products_routes.py  test_sat_catalogs.py
